--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   </div>
   <div class="main">
     <div class="clearfix">
-      <h1>Olivia Merkior</h1>
+      <h1>Rapundles</h1>
       <p>
-       I am currently a freshman (9th grader) at Towers
-       High School. My courses consist of physcial science, founds of engineering and tech, intro to software tech, and world geography.
-       The classes are pretty easy and I'm thankful for that.
+       At rapundles, we have the best of the best, top quality, raw virgin hair. We offer our customers every and anything they look for in hair.
+        Believing in yourself is life-changing, and we want to give people a chance to experience that.
+        Everything in the Rapundles line is designed to be luxurious, empowering, and made to feel like it was created just for the person wearing it
       </p>
       <p>
         My personal interest include hair and anything based on cosmetology. I also love fashion. If I decide to go to college, 
