--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         With real estate, I'm not quite sure due to the fact that I've heard it's not as easy as it looks. It could take years 
         for your career to actually take off and for you to close on homes.
       </p>
-      ![Screenshot 2022-11-03 11 53 19 AM](https://user-images.githubusercontent.com/113201879/199775357-03aa15f0-90a3-44f4-8f0e-c6a679cdbfb2.png)!
+      blob:chrome-untrusted://media-app/0862fa92-0020-4154-8440-66447116cd1c
     </div>
     </body>
  </html>
