--- a/index.html
+++ b/index.html
@@ -19,12 +19,11 @@
         Everything in the Rapundles line is designed to be luxurious, empowering, and made to feel like it was created just for the person wearing it
       </p>
       <p>
-        My personal interest include hair and anything based on cosmetology. I also love fashion. If I decide to go to college, 
-        I would most likely major in real estate or dentistry. To dig a little deeper, I would prefer to be an orthodontist. 
-        With real estate, I'm not quite sure due to the fact that I've heard it's not as easy as it looks. It could take years 
-        for your career to actually take off and for you to close on homes.
+        Get to know the CEO - My personal interest include hair and anything based on cosmetology. I also love fashion. I decided to start my own hair
+        business because I never wanted to work for someone. I wanted to do things how I wanted and when I wanted. It was a tough start but nothing comes
+        easy. I'm proud of how much work I put into this because it really payed off.
       </p>
-      ![(https://user-images.githubusercontent.com/113201879/199775357-03aa15f0-90a3-44f4-8f0e-c6a679cdbfb2.png)]
+     
     </div>
     </body>
  </html>
